[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/sprites/activity_ui.png" type="Texture" id=1]
[ext_resource path="res://controls/activity_panel.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/alcohol.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/food.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/bed.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/ui_dot.png" type="Texture" id=7]

[sub_resource type="Shader" id=1]

code = "shader_type canvas_item;

render_mode blend_mix;
uniform bool grayscale = false;

vec4 to_grayscale(vec4 col){
	float avg = (col.r + col.g + col.b) / 3.0;
	return vec4(avg, avg, avg, col.a);
}

void fragment(){
	vec4 pixel_col = texture(TEXTURE, UV);
	
	if(grayscale){
		COLOR = to_grayscale(pixel_col);
	} else {
		COLOR = pixel_col;
	}
}"
_sections_unfolded = [ "Resource" ]

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = SubResource( 1 )
shader_param/grayscale = false
_sections_unfolded = [ "Resource", "shader_param" ]

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("arrow:margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 4, 4, 4 ),
"update": 0,
"values": [ 6, 10, 6 ]
}

[sub_resource type="Animation" id=4]

resource_name = "fade"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 0.25 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=6]

size = 16
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=7]

font_path = "res://assets/fonts/KenPixel.ttf"

[sub_resource type="DynamicFont" id=8]

size = 8
use_mipmaps = false
use_filter = false
font_data = SubResource( 7 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 1, 1 )
_sections_unfolded = [ "Resource" ]

[node name="activity_panel" type="NinePatchRect"]

material = SubResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 111.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource( 2 )
activity_name = "Example"
activity_hours = "All Day"
activity_duration = 2
has_food = false
has_drink = false
has_bed = false

[node name="bounce" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 0
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/bounce = SubResource( 3 )
anims/fade = SubResource( 4 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -52.5
margin_top = 3.0
margin_right = 53.5
margin_bottom = 79.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 1
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect", "Size Flags", "Visibility", "custom_constants" ]

[node name="activity_name" type="Label" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 6.0
margin_right = 106.0
margin_bottom = 18.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Example"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Material", "Visibility" ]

[node name="activity_hours" type="Label" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 22.0
margin_right = 106.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "Open: All Day"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Material", "Rect", "Size Flags", "custom_fonts" ]

[node name="activity_duration" type="Label" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 106.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.6
custom_fonts/font = SubResource( 8 )
text = "Duration: 2hrs"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Material" ]

[node name="activity_types" type="HBoxContainer" parent="VBoxContainer" index="3"]

use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 54.0
margin_right = 106.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Margin", "Material" ]

[node name="drink" type="TextureRect" parent="VBoxContainer/activity_types" index="0"]

use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_right = 41.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
stretch_mode = 0
_sections_unfolded = [ "Grow Direction", "Margin", "Material" ]

[node name="food" type="TextureRect" parent="VBoxContainer/activity_types" index="1"]

use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 45.0
margin_right = 61.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
stretch_mode = 0
_sections_unfolded = [ "Margin", "Material" ]

[node name="bed" type="TextureRect" parent="VBoxContainer/activity_types" index="2"]

use_parent_material = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 65.0
margin_right = 81.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
stretch_mode = 0
_sections_unfolded = [ "Margin", "Material" ]

[node name="arrow" type="TextureRect" parent="." index="2"]

use_parent_material = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -8.0
margin_top = 6.0
margin_right = 8.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Grow Direction", "Margin", "Material", "Rect" ]

[node name="area" type="Area2D" parent="." index="3"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Material", "Transform", "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area" index="0"]

position = Vector2( 8.89177, 8.89119 )
shape = SubResource( 9 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]

[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]


